# SolAsterTutorial

./: Download_tutorial.ipynb  ENV.yml  README.md  Tutorial.ipynb  conda_env.yml  conda_env_solaster.yml  introduction.md  pyproject.toml  timeseries.csv  timeseries_iterated.csv
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
