[tool.poetry]
authors = ["Ben Lakeland <bsl204@exeter.ac.uk>, Federica Rescigno <fr307@exeter.ac.uk>"]
description = "A brief tutorial on how to download and use SDO images of the Sun"
name = "solastertutorial"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
astropy = "^5.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mkdocs = "^1.4.2"
mkdocs-jupyter = "^0.22.0"
# mkdocs-material = "^9.1.1"
drms = "^0.6.3"
ipykernel = "^6.21.3"
ipython = "^8.11.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
pathlib = "^1.0.1"
pymdown-extensions = "^9.10"
python = ">=3.8,<3.12"
zeep = "^4.2.1"

[tool.poetry.group.dev.dependencies]
# kaleido = "^0.2.1.post1"
notebook = "^6.5.3"
# scikit-image = "^0.20.0"
scikit-learn = "^1.2.1"
scipy = "^1.10.1"
sunpy = "^4.1.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
